PMD + FindBugs